<?xml version="1.0"?>

<resources>
    <string name="app_name">MeruMuseum</string>

    <string name="helprev">

        <font color="#E46D45"><b>Buy tickets</b> </font> - here you will be able to buy tickets\n\n
First choose if you are a citizen,resident or non resident\n
Then enter the number of adult(s)  and kid(s)
The proceed to pay\n\n

<font color="#E46D45"><b>VR</b> </font>-here you will be able to explore the museum\n
In virtual reality ..tilt your device to landscape or of you have a vr headset you can use it.\n\n

<font color="#E46D45"><b>My Activities</b> </font>- here you will get your ticket  if its approved\n\n

<font color="#E46D45"><b>Feedback</b> </font>-we would like to hear your feedback you can send feedback to either Admin, Curator,Guide or finance.\n\n
<font color="#E46D45"><b>Learn</b> </font>- here you will also be to get to know more about the museum, artefacts and overall more about the history.\n\n


    </string>



    <string name="open">open</string>

    <string name="prefStatus">lll</string>

    <string name="close">close</string>

    <string name="visit"> How did your visit go?\n\n We hope you are having or had a wonderfull and memorable day?\n\n To help us improve the Meru Museum experience Please let us know how it went.\n\n </string>

    <string name="pleafeed"> If you are experiencing or noticed\n something that is not up standards,we would like to\n hear about it so we can look into addressing the issue\n got to feedback and submit your feedback\n </string>

    <string name="pleafeed2"> We are sorry to hear that your experience hasnt lived to your expectations. </string>


    <string-array name="Vr">

        <item>Vr</item>

    </string-array>


    <string-array name="Vr1">

        <item>Vr</item>

    </string-array>


    <string-array name="typelist">

        <item>Vr</item>

    </string-array>


    <string-array name="typelist1">

        <item>Vr</item>

    </string-array>


    <string-array name="locations">

        <item>snakes park</item>

        <item>Ameru huts</item>

        <item>primates park</item>

        <item>tortoise</item>

        <item>crocodile</item>

    </string-array>
    <string name="introL">
        <b>Meru Museum</b>\nwas established in 1974,\n
        from a District Commissioner building during the colonial days.\n
        The building is the heart of the museum and was built in 1916,\n
        the DC was part of administration in Mt.Kenya region.\n
    </string>

    <string name="locC">
        Museums have curators,they are a keepers or custodians of collections.
        to Contact the curator
        The Curator\n\n
            Meru Museum\n
            P.O.Box 597- 60200, Meru.\n\n
            Tel: 064- 32482

    </string>
    <string name="arte">
  Meru Museum also has artefacts wood curvings,art, paintings, tools\n
        that have been collected over time from Ameru people.

    </string>
    <string name="anime">
  Meru Museum has a small animal part that has indigenous animals, birds and snakes.
 And also exinct animals which are stuffed.

    </string>
    <string name="herbz">
 You will be able learn more about the traditional ways that Ameeru used for medicine.
        You will be able to see herbs and how they were used to treat aliments and other conditions.
    </string>
    <string name="hisz">
 Evolution of mankind and how we came to be ,many evidence of early man are shown in the museum.
    </string>
    <string name="homez">
        A typical Ameru home set up is presented in museum. The traditional homestead is also important aspect of the society.
    </string>
    <string name="njuri">
        <font color="#E46D45">Njuri Ncheke</font>
        The structure of Ameru community and how the society is, the clan of elders  are the representation of the community.
    </string>

    <string name="ipw">192.168.72.187</string>

    <string name="data"> +--------+--------------+------------+--------+---------+ | emp_id | emp_name | hire_date | salary | dept_id | +--------+--------------+------------+--------+---------+ | 1 | Ethan Hunt | 2001-05-01 | 5000 | 4 | | 2 | Tony Montana | 2002-07-15 | 6500 | 1 | | 3 | Sarah Connor | 2005-10-18 | 8000 | 5 | | 4 | Rick Deckard | 2007-01-03 | 7200 | 3 | | 5 | Martin Blank | 2008-06-24 | 5600 | NULL | +--------+--------------+------------+--------+---------+ </string>

</resources>