<?xml version="1.0" encoding="UTF-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

          <androidx.cardview.widget.CardView
              app:cardCornerRadius="6dp"
              app:cardElevation="6dp"
              android:layout_margin="4dp"
              app:cardBackgroundColor="@color/colorPrimaryDark"

              android:layout_width="match_parent"
              android:layout_height="200dp">
              <TextView
                  android:gravity="center_horizontal"
                  android:textSize="18sp"
                  android:layout_width="match_parent"
                  android:text="@string/introL"

                  android:layout_height="match_parent"/>





          </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"

                android:layout_width="match_parent"
                android:layout_height="200dp">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/locC"
                    android:textSize="21sp"
                    android:gravity="center_horizontal"

                    android:layout_height="match_parent"/>





            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/arte"
                    android:textSize="21sp"
                    android:gravity="center_horizontal"

                    android:layout_height="match_parent"/>





            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/anime"
                    android:textSize="21sp"
                    android:gravity="center_horizontal"

                    android:layout_height="match_parent"/>





            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/herbz"
                    android:textSize="21sp"
                    android:gravity="center_horizontal"

                    android:layout_height="match_parent"/>





            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/hisz"
                    android:textSize="21sp"
                    android:gravity="center_horizontal"

                    android:layout_height="match_parent"/>





            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/homez"
                    android:textSize="21sp"
                    android:gravity="center_horizontal"

                    android:layout_height="match_parent"/>





            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/njuri"
                    android:textSize="21sp"
                    android:gravity="center_horizontal"

                    android:layout_height="match_parent"/>





            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>




<!--    <LinearLayout-->
<!--        android:id="@+id/lin"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="56dp"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageButton-->
<!--            android:id="@+id/eventbtn"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:background="@drawable/event" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/time_onbtn"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:layout_marginStart="34dp"-->
<!--            android:background="@drawable/clock" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/mapbtn"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:layout_marginStart="34dp"-->
<!--            android:background="@drawable/map" />-->

<!--    </LinearLayout>-->

</RelativeLayout>